force-app/main/default/objects/Access_Profile__c/Access_Profile__c.object-meta.xml
<CustomObject>
    <description>A person's standing access preferences. Owned by the person, not by HR. CONTAINS NO DIAGNOSIS, CONDITION, MEDICAL OR DISABILITY-TYPE FIELD BY DESIGN.</description>
    <label>Access Profile</label>
    <nameField>
        <label>Profile Number</label>
        <type>AutoNumber</type>
        <displayFormat>AP-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Access Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>