force-app/main/default/objects/Access_Profile__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Whether this profile is currently in use.</description>
    <inlineHelpText>Untick to stand the whole profile down. Preferences stop travelling immediately and nobody is asked why.</inlineHelpText>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>