force-app/main/default/objects/Access_Profile__c/fields/Never_Call__c.field-meta.xml
<CustomField>
    <fullName>Never_Call__c</fullName>
    <description>Default true. Only the person may set this to false.</description>
    <label>Never Call</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>