force-app/main/default/objects/Access_Profile__c/fields/Person_Handle__c.field-meta.xml
<CustomField>
    <fullName>Person_Handle__c</fullName>
    <description>Hashed contact handle. Never store a raw phone number or email.</description>
    <inlineHelpText>A salted hash or an employee reference. Never a raw phone number. If you are looking at a phone number here, something is broken.</inlineHelpText>
    <label>Person Handle</label>
    <length>64</length>
    <type>Text</type>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>