force-app/main/default/objects/Access_Profile__c/fields/Plain_Language_Mode__c.field-meta.xml
<CustomField>
    <fullName>Plain_Language_Mode__c</fullName>
    <label>Plain Language Mode</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>