force-app/main/default/objects/Access_Profile__c/fields/Preferred_Modality__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Modality__c</fullName>
    <description>How this person prefers to send and receive.</description>
    <inlineHelpText>How they prefer to be reached. Answer in the same form they used. A voice note answered with a wall of text is a door closing.</inlineHelpText>
    <label>Preferred Modality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Voice note</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>