force-app/main/default/objects/Access_Profile__c/listViews/All_Profiles.listView-meta.xml
<ListView>
    <fullName>All_Profiles</fullName>
    <columns>NAME</columns>
    <columns>Preferred_Modality__c</columns>
    <columns>Never_Call__c</columns>
    <columns>Plain_Language_Mode__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All profiles</label>
</ListView>