force-app/main/default/objects/Access_Profile__c/listViews/Asked_For_Plain_Language.listView-meta.xml
<ListView>
    <fullName>Asked_For_Plain_Language</fullName>
    <columns>NAME</columns>
    <columns>Preferred_Modality__c</columns>
    <columns>Never_Call__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plain_Language_Mode__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Asked for plain language</label>
</ListView>