force-app/main/default/objects/Access_Profile__c/listViews/Cannot_Take_A_Call.listView-meta.xml
<ListView>
    <fullName>Cannot_Take_A_Call</fullName>
    <columns>NAME</columns>
    <columns>Preferred_Modality__c</columns>
    <columns>Plain_Language_Mode__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Never_Call__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cannot take a call</label>
</ListView>